--- a/20190708.ipynb
+++ b/20190708.ipynb
@@ -1,6 +1,29 @@
-https://jakevdp.github.io/PythonDataScienceHandbook/02.09-structured-data-numpy.html
-
 {
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Jupyter Notebook And Markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This is a jupyter notebook document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using Markdown see <https://markdown.tw/#em>.\n",
+    "\n",
+    "You can embed a Python code chunk like this:"
+   ]
+  },
  "cells": [
   {
    "cell_type": "code",
