--- a/20190708.ipynb
+++ b/20190708.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#2019年7月8日\n",
+    "\n",
+    "<a>https://jakevdp.github.io/PythonDataScienceHandbook/02.09-structured-data-numpy.html</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
