--- a/20190708.ipynb
+++ b/20190708.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "#2019年7月8日練習\n",
     "\n",
-    "https://jakevdp.github.io/PythonDataScienceHandbook/02.09-structured-data-numpy.html"
+    "https://jakevdp.github.io/PythonDataScienceHandbook/02.09-structured-data-numpy.html",
+    "\n",
+    "#程式內容"
    ]
   },
   {
