--- a/Week01/20190708.ipynb
+++ b/Week01/20190708.ipynb
@@ -1,1 +1,58 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#2019年7月8日練習\n",
+    "\n",
+    "https://jakevdp.github.io/PythonDataScienceHandbook/02.09-structured-data-numpy.html",
+    "\n",
+    "#程式內容"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('name', '<U10'), ('age', '<i4'), ('weight', '<f8')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Use a compound data type for structured arrays\n",
+    "data = np.zeros(4, dtype={'names':('name', 'age', 'weight'),\n",
+    "                          'formats':('U10', 'i4', 'f8')})\n",
+    "print(data.dtype)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
