--- a/Week01/20190708.ipynb
+++ b/Week01/20190708.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#2019年7月8日練習\n",
     "\n",
-    "eference:https://jakevdp.github.io/PythonDataScienceHandbook/02.09-structured-data-numpy.html",
+    "Reference:https://jakevdp.github.io/PythonDataScienceHandbook/02.09-structured-data-numpy.html",
     "\n",
     "#程式內容"
    ]
