--- a/20190711/hw01.Rmd
+++ b/20190711/hw01.Rmd
@@ -2,23 +2,67 @@
 title: "HW01"
 author: "Shainting"
 date: "2019/7/12"
-output: html_document
+output: 
+  html_document:
+    toc: true
+    toc_depth: 2
+    toc_float:
+      collapsed: false
+      smooth_scroll: false
 ---
-```{r include = FALSE}
+```{r setup, include = FALSE}
+library(knitr)
 library(dplyr)
+library(kableExtra)
+knitr::opts_chunk$set(echo = TRUE)
+options(knitr.table.format = "html")
 ```
 
-# 勞工對工作時數之滿意情形
+<h3>勞工對工作時數之滿意情形</h3>
 ```{r}
-employeeHour <- read.csv("D:/School/2019 - CS - X/data/勞工對工作時數之滿意情形.csv", header=FALSE, stringsAsFactors=FALSE, fileEncoding ="UTF-8-BOM")
+employeeHour <- read.csv("D:/School/2019 - CS - X/data/勞工對工作時數之滿意情形.csv", header=FALSE, fileEncoding ="UTF-8-BOM")
 
-employeeHour %>% filter(V1 == "年齡") %>% select(-V1, -V3) %>% setNames(c("年齡層","很滿意","滿意","普通","不滿意","很不滿意"))
+kable(employeeHour %>% filter(V1 == "年齡") %>% select(-V1, -V3) %>% setNames(c("年齡層","很滿意","滿意","普通","不滿意","很不滿意"))) %>% kable_styling() %>% scroll_box(height = "300px")
 ```
 
-# 勞工對整體工作之滿意情形
+<h3>勞工對整體工作之滿意情形</h3>
 ```{r}
-employeeEntire <- read.csv("D:/School/2019 - CS - X/data/勞工對整體工作之滿意情形.csv", header=FALSE, stringsAsFactors=FALSE, fileEncoding ="UTF-8-BOM")
+employeeEntire <- read.csv("D:/School/2019 - CS - X/data/勞工對整體工作之滿意情形.csv", header=FALSE, fileEncoding ="UTF-8-BOM")
 
-employeeEntire %>% filter(V1 == "年齡") %>% select(-V1, -V3) %>% setNames(c("年齡層","很滿意","滿意","普通","不滿意","很不滿意"))
+kable(employeeEntire %>% filter(V1 == "年齡") %>% select(-V1, -V3) %>% setNames(c("年齡層","很滿意","滿意","普通","不滿意","很不滿意"))) %>% kable_styling() %>% scroll_box(height = "300px")
 ```
-
+<h3>開發紀錄</h3>
+<ol>
+  <li>由於檔案的編碼問題，所以增加了<code>fileEncoding = "UTF-8-BOM"</code></li>
+  <li>原來的資料格式是長這個樣子
+```{r echo=FALSE}
+kable(read.csv("D:/School/2019 - CS - X/data/勞工對工作時數之滿意情形.csv" ,  fileEncoding ="UTF-8-BOM")) %>% kable_styling() %>% scroll_box(height = "200px")
+```
+  實在太亂了，而且每一個欄位的title變數不好用<br>
+  所以加上<code>header = FALSE</code>而不使用原來的變數
+```{r echo=FALSE}
+kable(read.csv("D:/School/2019 - CS - X/data/勞工對工作時數之滿意情形.csv", header=FALSE, fileEncoding ="UTF-8-BOM")) %>% kable_styling() %>% scroll_box(height = "200px")
+```
+  </li>
+  <li>在這裡，我想要知道不同年齡層之間工作滿意度的差別，所以我們取<code>filter(V1 == "年齡")</code>(由於有<code>%>%</code>符號的關係，所以filter方法的第一個函數不需要把資料丟進去，只要在前面宣告一次就可以)
+```{r echo=FALSE}
+kable(read.csv("D:/School/2019 - CS - X/data/勞工對工作時數之滿意情形.csv", header=FALSE, fileEncoding ="UTF-8-BOM") %>% filter(V1 == "年齡")) %>% kable_styling() %>% scroll_box(height = "200px")
+```
+  </li>
+  <li><code>select(-V1, -V3)</code>，V1為統計項目，V3為樣本數，這兩項資料不需要，所以在變數前面加<code>-</code>符號來做反選取，如此一來，剩下的就是我們要的資料了
+```{r echo=FALSE}
+kable(read.csv("D:/School/2019 - CS - X/data/勞工對工作時數之滿意情形.csv", header=FALSE, fileEncoding ="UTF-8-BOM") %>% filter(V1 == "年齡") %>% select(-V1, -V3)) %>% kable_styling() %>% scroll_box(height = "200px")
+```
+  </li>
+  <li>
+  接下來就是重新命名變數名稱，以方便之後圖形化的步驟，<code>setNames(c("年齡層","很滿意","滿意","普通","不滿意","很不滿意"))</code>
+```{r echo=FALSE}
+kable(read.csv("D:/School/2019 - CS - X/data/勞工對工作時數之滿意情形.csv", header=FALSE, fileEncoding ="UTF-8-BOM") %>% filter(V1 == "年齡") %>% select(-V1, -V3) %>% setNames(c("年齡層","很滿意","滿意","普通","不滿意","很不滿意"))) %>% kable_styling() %>% scroll_box(height = "200px")
+```
+  </li>
+</ol>
+<h3>google紀錄</h3>
+<ol>
+  <li><a href="https://statistical-programming.com/setnames-r-function-example">SetNames方法</a></li>
+  <li><a href="https://medium.com/@kstseng/r-markdown-template-a4b0449a56d5">knitr套件簡易教學，資料輸出表格化</a></li>
+</ol>
